--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   height: 100vh;
   place-items: center;
   overflow: hidden;
+  padding: 20px;
 }
 
 .pattern-img-top {
@@ -45,7 +46,7 @@ body {
   max-width: 1000px;
   background: var(--white);
   border-radius: 15px;
-  width: 400px;
+  max-width: 400px;
   height: 400px;
 }
 
@@ -119,4 +120,18 @@ body {
 
 .information-item:not(.information-item:first-child) {
   margin-left: 50px;
+}
+
+@media screen and (max-width: 1000px) {
+  .pattern-img-bottom {
+    width: 100vw;
+    bottom: -10%;
+    right: -40%;
+  }
+
+  .pattern-img-top {
+    width: 100vw;
+    top: -15%;
+    left: -40%;
+  }
 }
